# python-code-outline

./: .gitignore  LICENSE  README.md  example_report.txt  main.py  pyproject.toml  python_report_generator.py  report.txt  requirements.txt  test_python_report_generator.py
.github/workflows/: pytest.yml
python_code_outline/: __init__.py  python_report_generator.py
tests/: test_python_report_generator.py
