[tool.poetry]
name = "python-code-outline"
version = "0.1.1"
description = "Takes a folder path and outputs a text outline of the code, supports ignore files."
authors = ["Sean Dearnaley <SeanDearnaley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
folder-tree-generator = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
mypy = "^1.2.0"
pytest = "^7.3.0"
ruff = "^0.0.261"
black = "^23.3.0"
pytest-mock = "^3.10.0"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

