[tool.poetry]
name = "python-code-outline"
version = "0.1.8"
description = "Takes a folder path and outputs a text outline of the code, supports ignore files."
authors = ["Sean Dearnaley <SeanDearnaley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
mypy = "^1.2.0"
pytest = "^7.3.0"
ruff = "^0.0.261"
black = "^23.3.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "python_code_outline"